--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,34 +2,40 @@
 <div style="text-align: center;">
   <h1>Welcome to {{ title }}!</h1>
 
-  <div style="margin: 20px;">
+  <div style="margin: auto">
     <button [style.backgroundColor]="mode === 'on' ? 'lime' : 'white'" (click)="toggleDarkMode()" >
       Dark Mode is {{mode === 'on' ? 'ON' : 'OFF'}}
     </button>
   </div>
 
-  <table style="border: solid 1px #000;">
+  <table cellspacing='0'>
     <tr>
-      <td>brightness {{ brightness }}%:</td>
+      <td>Brightness</td>
       <td>
-        <mat-slider thumbLabel [displayWith]="formatLabel" tickInterval="1" min="1" max="150" step="1" [(ngModel)]="brightness" (input)="onBrightnessChange($event)" ></mat-slider>
+        {{ brightness }}% <mat-slider thumbLabel [displayWith]="formatLabel" tickInterval="1" min="1" max="150" step="1" [(ngModel)]="brightness" (input)="onBrightnessChange($event)" ></mat-slider>
       </td>
     </tr>
     <tr>
-      <td>contrast {{ contrast }}%:</td>
+      <td>Contrast</td>
       <td>
-        <mat-slider thumbLabel [displayWith]="formatLabel" tickInterval="1" min="1" max="150" step="1" [(ngModel)]="contrast" (input)="onContrastChange($event)" ></mat-slider>
+        {{ contrast }}% <mat-slider thumbLabel [displayWith]="formatLabel" tickInterval="1" min="1" max="150" step="1" [(ngModel)]="contrast" (input)="onContrastChange($event)" ></mat-slider>
       </td>
     </tr>
     <tr>
-      <td>sepia {{ sepia }}%:</td>
+      <td>Sepia</td>
       <td>
-        <mat-slider thumbLabel [displayWith]="formatLabel" tickInterval="1" min="1" max="100" step="1" [(ngModel)]="sepia" (input)="onSepiaChange($event)" ></mat-slider>
+        {{ sepia }}% <mat-slider thumbLabel [displayWith]="formatLabel" tickInterval="1" min="1" max="100" step="1" [(ngModel)]="sepia" (input)="onSepiaChange($event)" ></mat-slider>
       </td>
     </tr>
     <tr>
-      <td><button (click)="reset()">Reset</button></td>
-      <td></td>
+      <td>Grayscale</td>
+      <td>
+        {{ grayscale }}% <mat-slider thumbLabel [displayWith]="formatLabel" tickInterval="1" min="1" max="100" step="1" [(ngModel)]="grayscale" (input)="onGrayScaleChange($event)" ></mat-slider>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="2"><button (click)="reset()">Reset</button></td>
+      
     </tr>
   </table>
   <router-outlet></router-outlet>
