--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,44 +1,8 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align: center;">
   <h1>Welcome to {{ title }}!</h1>
-<!-- 
-  <div style="margin: auto">
-    <button [style.backgroundColor]="mode ? 'lime' : 'white'" (click)="toggleDarkMode()" >
-      Dark Mode is {{mode ? 'ON' : 'OFF'}}
-    </button>
-  </div> -->
-
-  <table cellspacing='0'>
-    <tr>
-      <td colspan="2"><mat-slide-toggle [(ngModel)]="mode" (change)="toggleDarkMode()">Dark Mode {{mode ? 'ON' : 'OFF'}}</mat-slide-toggle></td>
-    </tr>
-    <tr>
-      <td>Brightness</td>
-      <td>
-        {{ brightness }}% <mat-slider thumbLabel [displayWith]="darkModeService.formatLabel" tickInterval="1" min="0" max="150" step="1" [(ngModel)]="brightness" (input)="onBrightnessChange($event)" ></mat-slider>
-      </td>
-    </tr>
-    <tr>
-      <td>Contrast</td>
-      <td>
-        {{ contrast }}% <mat-slider thumbLabel [displayWith]="darkModeService.formatLabel" tickInterval="1" min="0" max="150" step="1" [(ngModel)]="contrast" (input)="onContrastChange($event)" ></mat-slider>
-      </td>
-    </tr>
-    <tr>
-      <td>Sepia</td>
-      <td>
-        {{ sepia }}% <mat-slider thumbLabel [displayWith]="darkModeService.formatLabel" tickInterval="1" min="0" max="100" step="1" [(ngModel)]="sepia" (input)="onSepiaChange($event)" ></mat-slider>
-      </td>
-    </tr>
-    <tr>
-      <td>Grayscale</td>
-      <td>
-        {{ grayscale }}% <mat-slider thumbLabel [displayWith]="darkModeService.formatLabel" tickInterval="1" min="0" max="100" step="1" [(ngModel)]="grayscale" (input)="onGrayScaleChange($event)" ></mat-slider>
-      </td>
-    </tr>
-    <tr>
-      <td colspan="2"><button (click)="reset()">Reset</button></td>      
-    </tr>
-  </table>
+  
+  <app-dark-mode-settings></app-dark-mode-settings>
+  
   <router-outlet></router-outlet>
 </div>
