--- a/src/app/components/dark-mode-settings/dark-mode-settings.component.html
+++ b/src/app/components/dark-mode-settings/dark-mode-settings.component.html
@@ -28,6 +28,6 @@
       </td>
     </tr>
     <tr>
-      <td colspan="2"><button (click)="reset()">Reset</button></td>      
+      <td colspan="2"><button mat-button (click)="reset()">Reset</button></td>      
     </tr>
   </table>
