--- a/src/styles.css
+++ b/src/styles.css
@@ -24,7 +24,7 @@ table a:link {
       font-size:12px;
 
       background:#eaebec;
-      margin:20px;
+      margin:auto;
       border:#ccc 1px solid;
   
       -moz-border-radius:3px;
