--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align: center;">
   <h1>{{ title }}!</h1>
-  
-  <app-dark-mode-settings></app-dark-mode-settings>
-  
+  <button mat-button (click)="openDarkModeSettingsDialog()">DarkMode</button>
   <router-outlet></router-outlet>
 </div>
