--- a/src/app/components/dark-mode-settings/dark-mode-settings.component.html
+++ b/src/app/components/dark-mode-settings/dark-mode-settings.component.html
@@ -1,7 +1,17 @@
 
+
+
+
+
+
+<mat-dialog-content class="mat-typography">
+<h4 style="margin-left: 12px;">DarkMode Settings</h4>
   <table cellspacing='0'>
     <tr>
-      <td colspan="2"><mat-slide-toggle [(ngModel)]="darkmode" (change)="toggleDarkMode()">Dark Mode {{darkmode ? 'ON' : 'OFF'}}<div ngClass="{{darkmode ? 'darkmode-icon' : 'darkmode-off-icon'}}"></div></mat-slide-toggle> </td>
+      <th colspan="2">{{isIE ? 'Your browser does not support dark mode' : 'You browser supports dark mode!'}}</th>
+    </tr>
+    <tr>
+      <td colspan="2"><mat-slide-toggle [(ngModel)]="darkmode" (change)="toggleDarkMode()"><span style="margin-left:40px">Dark Mode is: {{darkmode ? 'ON' : 'OFF'}}</span><span ngClass="{{darkmode ? 'darkmode-icon' : 'darkmode-off-icon'}}"></span></mat-slide-toggle> </td>
     </tr>
     <tr>
       <td>Brightness</td>
@@ -27,7 +37,9 @@
         {{ grayscale }}% <mat-slider thumbLabel [displayWith]="darkModeService.formatLabel" tickInterval="1" min="0" max="100" step="1" [(ngModel)]="grayscale" (input)="onGrayScaleChange($event)" ></mat-slider>
       </td>
     </tr>
-    <tr>
-      <td colspan="2"><button mat-button (click)="reset()">Reset</button></td>      
-    </tr>
   </table>
+</mat-dialog-content>
+<mat-dialog-actions align="end">
+  <button mat-button (click)="reset()">Reset</button>
+  <button mat-button [mat-dialog-close]="true" cdkFocusInitial>Done</button>
+</mat-dialog-actions>
