--- a/src/app/components/dark-mode-settings/dark-mode-settings.component.html
+++ b/src/app/components/dark-mode-settings/dark-mode-settings.component.html
@@ -1,40 +1,87 @@
-
-
-
-
-
-
 <mat-dialog-content class="mat-typography">
-<h4 style="margin-left: 12px;">DarkMode Settings</h4>
-  <table cellspacing='0'>
+  <h4 style="margin-left: 12px;">DarkMode Settings</h4>
+  <table cellspacing="0">
     <tr *ngIf="isIE">
-      <td colspan="2"><span style="color:red">This browser does not support dark mode.<br>Proceed at your own risk...</span></td>
+      <td colspan="2">
+        <span style="color: red;"
+          >This browser does not support dark mode.<br />Proceed at your own
+          risk...</span
+        >
+      </td>
     </tr>
     <tr>
-      <td colspan="2"><mat-slide-toggle [(ngModel)]="darkmode" (change)="toggleDarkMode()"><span style="margin-left:40px">Dark Mode is: {{darkmode ? 'ON' : 'OFF'}}</span><span ngClass="{{darkmode ? 'darkmode-icon' : 'darkmode-off-icon'}}"></span></mat-slide-toggle> </td>
+      <td colspan="2">
+        <mat-slide-toggle [(ngModel)]="darkmode" (change)="toggleDarkMode()"
+          ><span style="margin-left: 40px;"
+            >Dark Mode is: {{ darkmode ? "ON" : "OFF" }}</span
+          ><span
+            ngClass="{{ darkmode ? 'darkmode-icon' : 'darkmode-off-icon' }}"
+          ></span
+        ></mat-slide-toggle>
+      </td>
     </tr>
     <tr>
       <td>Brightness</td>
       <td>
-        {{ brightness }}% <mat-slider thumbLabel [displayWith]="darkModeService.formatLabel" tickInterval="1" min="0" max="150" step="1" [(ngModel)]="brightness" (input)="onBrightnessChange($event)" ></mat-slider>
+        {{ brightness }}%
+        <mat-slider
+          thumbLabel
+          [displayWith]="darkModeService.formatLabel"
+          tickInterval="1"
+          min="0"
+          max="150"
+          step="1"
+          [(ngModel)]="brightness"
+          (input)="onBrightnessChange($event)"
+        ></mat-slider>
       </td>
     </tr>
     <tr>
       <td>Contrast</td>
       <td>
-        {{ contrast }}% <mat-slider thumbLabel [displayWith]="darkModeService.formatLabel" tickInterval="1" min="0" max="150" step="1" [(ngModel)]="contrast" (input)="onContrastChange($event)" ></mat-slider>
+        {{ contrast }}%
+        <mat-slider
+          thumbLabel
+          [displayWith]="darkModeService.formatLabel"
+          tickInterval="1"
+          min="0"
+          max="150"
+          step="1"
+          [(ngModel)]="contrast"
+          (input)="onContrastChange($event)"
+        ></mat-slider>
       </td>
     </tr>
     <tr>
       <td>Sepia</td>
       <td>
-        {{ sepia }}% <mat-slider thumbLabel [displayWith]="darkModeService.formatLabel" tickInterval="1" min="0" max="100" step="1" [(ngModel)]="sepia" (input)="onSepiaChange($event)" ></mat-slider>
+        {{ sepia }}%
+        <mat-slider
+          thumbLabel
+          [displayWith]="darkModeService.formatLabel"
+          tickInterval="1"
+          min="0"
+          max="100"
+          step="1"
+          [(ngModel)]="sepia"
+          (input)="onSepiaChange($event)"
+        ></mat-slider>
       </td>
     </tr>
     <tr>
       <td>Grayscale</td>
       <td>
-        {{ grayscale }}% <mat-slider thumbLabel [displayWith]="darkModeService.formatLabel" tickInterval="1" min="0" max="100" step="1" [(ngModel)]="grayscale" (input)="onGrayScaleChange($event)" ></mat-slider>
+        {{ grayscale }}%
+        <mat-slider
+          thumbLabel
+          [displayWith]="darkModeService.formatLabel"
+          tickInterval="1"
+          min="0"
+          max="100"
+          step="1"
+          [(ngModel)]="grayscale"
+          (input)="onGrayScaleChange($event)"
+        ></mat-slider>
       </td>
     </tr>
   </table>
