--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,5 @@
-<!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align: center;">
   <h1>{{ title }}!</h1>
-  <button mat-button (click)="openDarkModeSettingsDialog()">DarkMode</button>
+  <button mat-button [disabled]="open" (click)="openDarkModeSettingsDialog($event)">DarkMode</button>
   <router-outlet></router-outlet>
 </div>
