--- a/src/app/components/dark-mode-settings/dark-mode-settings.component.html
+++ b/src/app/components/dark-mode-settings/dark-mode-settings.component.html
@@ -8,7 +8,7 @@
     </tr>
     <tr>
       <td colspan="2">
-        <mat-slide-toggle [(ngModel)]="params.darkmode" (change)="toggleDarkMode()" [disabled]="isIE"
+        <mat-slide-toggle [(ngModel)]="params.darkmode" (change)="toggleDarkMode($event)" [disabled]="isIE"
           ><span style="margin-left: 40px;"
             >Dark Mode is: {{ params.darkmode ? "ON" : "OFF" }}</span
           ><span
@@ -89,5 +89,6 @@
 </mat-dialog-content>
 <mat-dialog-actions align="end">
   <button mat-button (click)="reset()" [disabled]="isIE">Reset</button>
-  <button mat-button [mat-dialog-close]="true" cdkFocusInitial>Done</button>
+  <button mat-button [mat-dialog-close]="true" cdkFocusInitial>Cancel</button>
+  <button mat-button [mat-dialog-close]="true" (click)="save()" cdkFocusInitial>Save</button>
 </mat-dialog-actions>
