--- a/src/app/components/dark-mode-settings/dark-mode-settings.component.html
+++ b/src/app/components/dark-mode-settings/dark-mode-settings.component.html
@@ -88,7 +88,7 @@
   </table>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
-  <button mat-button (click)="reset()" [disabled]="isIE">Reset</button>
-  <button mat-button [mat-dialog-close]="true" cdkFocusInitial>Cancel</button>
-  <button mat-button [mat-dialog-close]="true" (click)="save()" cdkFocusInitial>Save</button>
+  <button mat-flat-button (click)="reset()" [disabled]="isIE" color="secondary">Reset</button>
+  <button mat-flat-button [mat-dialog-close]="true" color="default">Cancel</button>
+  <button mat-flat-button [mat-dialog-close]="true" (click)="save()" cdkFocusInitial color="primary">Save</button>
 </mat-dialog-actions>
