--- a/src/app/components/dark-mode-settings/dark-mode-settings.component.html
+++ b/src/app/components/dark-mode-settings/dark-mode-settings.component.html
@@ -90,5 +90,5 @@
 <mat-dialog-actions align="end">
   <button mat-flat-button (click)="reset()" [disabled]="isIE" color="secondary">Reset</button>
   <button mat-flat-button [mat-dialog-close]="true" color="default">Cancel</button>
-  <button mat-flat-button [mat-dialog-close]="true" (click)="save()" cdkFocusInitial color="primary">Save</button>
+  <button mat-flat-button (click)="save()" cdkFocusInitial color="primary">{{saveResp ? saveResp : 'Save'}}</button>
 </mat-dialog-actions>
