--- a/src/styles.css
+++ b/src/styles.css
@@ -6,7 +6,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 table a:link {
     color: #666;
     font-weight: bold;
-    text-decoration: none; 
+    text-decoration: none;
   }
   table a:visited {
     color: #999999;
@@ -18,29 +18,30 @@ table a:link {
       color: #bd5a35;
       text-decoration:underline;
   }
-  
+
   table {
       color:#666;
       font-size:12px;
+      border-collapse: collapse;
 
       background:#eaebec;
       margin:auto;
       border:#ccc 1px solid;
-  
+
       -moz-border-radius:3px;
       -webkit-border-radius:3px;
       border-radius:3px;
-  
+
       -moz-box-shadow: 0 1px 2px #d1d1d1;
       -webkit-box-shadow: 0 1px 2px #d1d1d1;
       box-shadow: 0 1px 2px #d1d1d1;
   }
-  
+
   table th {
       padding:8px;
       border-top:1px solid #fafafa;
       border-bottom:1px solid #e0e0e0;
-  
+
       background: #ededed;
       background: -webkit-gradient(linear, left top, left bottom, from(#ededed), to(#ebebeb));
       background: -moz-linear-gradient(top,  #ededed,  #ebebeb);
@@ -67,10 +68,13 @@ table a:link {
   }
   table td {
       padding:1px;
+      padding-left: 8px;
+    padding-right: 8px;
+
       border-top: 1px solid #ffffff;
       border-bottom:1px solid #e0e0e0;
       border-left: 1px solid #e0e0e0;
-  
+
       background: #fafafa;
       background: -webkit-gradient(linear, left top, left bottom, from(#fbfbfb), to(#fafafa));
       background: -moz-linear-gradient(top,  #fbfbfb,  #fafafa);
@@ -103,8 +107,8 @@ table a:link {
     background-image:  url(assets/brightness_3-24px.svg);
     background-repeat: no-repeat;
     background-position: center;
-    width: 24px; 
-    height: 24px; 
+    width: 24px;
+    height: 24px;
     margin-left: 64px;
     margin-right: 6px;
     float: right;
@@ -114,8 +118,8 @@ table a:link {
     background-image:  url(assets/brightness_5-24px.svg);
     background-repeat: no-repeat;
     background-position: center;
-    width: 24px; 
-    height: 24px; 
+    width: 24px;
+    height: 24px;
     margin-left:64px;
     margin-right: 6px;
     float: right;
