--- a/src/app/components/dark-mode-settings/dark-mode-settings.component.html
+++ b/src/app/components/dark-mode-settings/dark-mode-settings.component.html
@@ -1,11 +1,15 @@
 <h2 mat-dialog-title style="margin-bottom:12px;">DarkMode Settings</h2>
 <mat-dialog-content class="mat-typography">
 
-  <p style="text-align: left; padding-top:8px; margin-left: 20px;">
-   <mat-slide-toggle [(ngModel)]="params.darkmode" (change)="toggleDarkMode($event)" [disabled]="isIE">
-     <span *ngIf="!isIE">Dark Mode is: {{ params.darkmode ? "ON" : "OFF" }}</span>
-     <span style="color: red;" *ngIf="isIE">Sorry, this browser does not support dark mode. Try a newer browser!</span>
-   </mat-slide-toggle>
+  <p *ngIf="!isIE" style="text-align: center; padding-top:8px;">
+    <label style="margin-right: 6px; vertical-align: text-bottom;">Dark Mode:</label>
+    <mat-slide-toggle [(ngModel)]="params.darkmode" (change)="toggleDarkMode($event)">
+     <span>{{ params.darkmode ? "ON" : "OFF" }}</span>
+    </mat-slide-toggle>
+  </p>
+
+  <p *ngIf="isIE" style="text-align: center; padding-top:8px;">
+    <span style="color: red;">Sorry, this browser does not support dark mode. Try a newer browser!</span>
   </p>
 
 
