--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,9 @@
 <div style="text-align: center;">
+
   <h1>{{ title }}!</h1>
-  <button mat-button (click)="openDarkModeSettingsDialog($event)">
-    DarkMode
-  </button>
+
+  <button mat-button (click)="openDarkModeSettingsDialog($event)">DarkMode</button>
 
   <router-outlet></router-outlet>
+
 </div>
